# infra-genie

./: GEMINI.md  Makefile  README.md  pyproject.toml  server.py
.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
agents/galaxy_agent/: Dockerfile  Makefile  README.md  pyproject.toml
agents/galaxy_agent/.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
agents/galaxy_agent/app/: agent.py  azure_devops_client.py  checker_agent.py  config.py  github_code_manipulation_tool.py  github_integration.py  intelligent_code_modifier.py  main.py  orchestrator_agent.py  runtime_code_manipulator.py  server.py  standalone_code_modifier.py  webhook_handler.py  workflow_orchestrator.py
agents/galaxy_agent/app/agents/: __init__.py  azuredevops_agent.py  code_agent.py  github_agent.py
agents/galaxy_agent/app/tools/: __init__.py  git_tools.py  loop_condition_tool.py
agents/galaxy_agent/app/utils/: tracing.py  typing.py
agents/galaxy_agent/deployment/terraform/: build_triggers.tf  service.tf  variables.tf
agents/galaxy_agent/deployment/terraform/dev/: service.tf  variables.tf
agents/galaxy_agent/deployment/terraform/dev/vars/: env.tfvars
agents/galaxy_agent/deployment/terraform/vars/: env.tfvars
agents/galaxy_agent/tests/integration/: test_server_e2e.py
app/: __init__.py  agent.py  automated_rag_builder.py  compliance_api.py  compliance_guardrails.py  diagram_generator_tool.py  diagrams_rag_agent.py  diagrams_rag_system.py  enhanced_github_agent.py  image_generation_tool.py  intelligent_code_generator.py  intelligent_knowledge_system.py  live_docs_fetcher.py  mcp_github.py  rag_enabled_agents.py  rag_status_monitor.py  rag_storage_system.py  runtime_rag_bootstrap.py  server.py
app/utils/: gcs.py  tracing.py  typing.py
deployment/terraform/: variables.tf
deployment/terraform/dev/: variables.tf
deployment/terraform/vars/: env.tfvars
docs/: technical_overview.md
mcp-servers/azure-devops/: Dockerfile  entrypoint.sh  wrapper.py
mcp-servers/terraform/: CHANGELOG.md  CODEOWNERS  Dockerfile  Makefile  README.md  go.mod  go.sum  scan.hcl
mcp-servers/terraform/e2e/: README.md  cors_e2e_test.go  e2e_test.go  payloads.go
tests/integration/: test_server_e2e.py
tests/load_test/: load_test.py
(+56 files in other folders)
